<package>
  <name>can_util</name>
  <version>0.0.1</version>
  <description>

     can_util

  </description>
  <author>Elliot Johnson</author>
  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>marti_can_msgs</build_depend>
  <build_depend>build_tools</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>marti_can_msgs</run_depend>
  
</package>
