<package format="2">
  <name>can_util</name>
  <version>0.0.1</version>
  <description>

     can_util

  </description>
  <author>Elliot Johnson</author>
  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>build_tools</build_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>marti_can_msgs</depend>
  
</package>
