<package format="2">
  <name>console_util</name>
  <version>0.0.1</version>
  <description>

     console_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

</package>
