<package>
  <name>marti_data_structures</name>
  <version>0.0.1</version>
  <description>

     marti_data_structures

  </description>
  <author>Kris Kozak</author>
  <maintainer email="kkozak@swri.org">Kris Kozak</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>build_tools</build_depend>
</package>
