<package format="2">
  <name>marti_data_structures</name>
  <version>2.2.0</version>
  <description>

     marti_data_structures

  </description>
  <author>Kris Kozak</author>
  <maintainer email="kkozak@swri.org">Kris Kozak</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
