<package>
  <name>opencv_util</name>
  <version>0.0.1</version>
  <description>

     opencv_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>opencv2</build_depend>
  <build_depend>math_util</build_depend>
  <build_depend>build_tools</build_depend>
  
  <run_depend>opencv2</run_depend>
  <run_depend>math_util</run_depend>
</package>

