<package format="2">
  <name>opencv_util</name>
  <version>0.0.1</version>
  <description>

     opencv_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>opencv2</depend>
  <depend>math_util</depend>

</package>

