<?xml version="1.0"?>
<package format="2">
  <name>rosman</name>
  <version>0.0.1</version>
  <description>The rosman package</description>

  <maintainer email="robert.brothers@swri.org">Robert Brothers</maintainer>
  <maintainer email="matthew.bries@swri.org">Matt Bries</maintainer>

  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/rosman</url> -->

  <author email="robert.brothers@swri.org">Robert Brothers</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>marti_introspection_msgs</depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <export>
  </export>
</package>
