<package format="2">
  <name>string_util</name>
  <version>0.0.1</version>
  <description>

     string_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rostest</test_depend>
</package>

