<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swri_cli_tools</name>
  <version>3.5.2</version>
  <description>Command line tools for introspecting ROS systems</description>
  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <author email="david.anthony@swri.org">David Anthony</author>
  <license>BSD 3 Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>marti_introspection_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
