<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swri_cli_tools</name>
  <version>3.8.6</version>
  <description>Command line tools for introspecting ROS systems</description>

  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <author email="david.anthony@swri.org">David Anthony</author>

  <license>BSD 3 Clause</license>

  <depend>marti_introspection_msgs</depend>
  <depend>python3-natsort</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>
  <depend>ros2cli</depend>
  <depend>ros2node</depend>
  <depend>ros2param</depend>
  <depend>ros2topic</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
