<package format="2">
  <name>swri_console_util</name>
  <version>2.9.0</version>
  <description>

     swri_console_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>swri_math_util</depend>

</package>
