<package format="3">
  <name>swri_console_util</name>
  <version>3.5.0</version>
  <description>

     swri_console_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
