<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swri_console_util</name>
  <version>3.8.3</version>
  <description>
    Utility functions for interacting with console
  </description>
  <author>Marc Alban</author>
  <maintainer email="swri-rorobircs@swri.org">Southwest Research Institute</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
