<?xml version="1.0"?>
<package format="3">
  <name>swri_dbw_interface</name>
  <version>3.4.0</version>
  <description>
    This package provides documentation on common interface conventions for
    drive-by-wire systems.
  </description>

  <author>Elliot Johnson</author>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
